fix footer align

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -93,19 +93,28 @@
 @media only screen and (max-width: 600px) {
     .item {
         width: 50%;
-        align-items: center;
+        align-items: flex-start;
+    }
+    .item:nth-child(2) {
+        margin-top: 0;
+        align-items: flex-start;
     }
     .item:nth-child(3) {
         margin-top: 18px;
+        align-items: flex-start;
     }
+    
     .item:nth-child(4) {
         margin-top: 18px;
     }
     .social {
-        align-items: center;
+        align-items: flex-start;
     }
     .item a {
         margin: 6px 0;
         font-size: 20px;
+    }
+    .sub-column {
+        margin: 0 14px 0 0;
     }
 }
